added energy drinks

--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBD1123 Page1</title>
+    <title>WEBD1123 Page2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet" />
@@ -12,27 +12,23 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<nav>
+
+<body>
+    <nav>
     <ul>
         <li><a href="index.html">Page 1</a></li>
         <li><a href="index2.html">Page 2</a></li>
         <li><a href="index3.html">Page 3</a></li>
     </ul>
 </nav>
-<body>
     <div id="container1" class="container">
-        <h1>hello world</h1>
+        <h1>Page 2</h1>
+        <p id="one"></p>
     </div>
     <div id="container2" class="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
-<script src="js/script.js"> </script>
+<script src="js/script2.js"> </script>
 </body>
-<!--<nav>
-    <ul>
-        <li><a href="index.html">Page 1</a></li>
-        <li><a href="index2.html">Page 2</a></li>
-        <li><a href="index3.html">Page 3</a></li>
-    </ul>
-</nav>-->
+
 </html>
