--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBD1123 Page1</title>
+    <title>WEBD1123 Page3</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet" />
@@ -21,7 +21,7 @@
 </nav>
 <body>
     <div id="container1" class="container">
-        <h1>hello world</h1>
+        <h1>Page 3</h1>
     </div>
     <div id="container2" class="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
@@ -35,4 +35,5 @@
         <li><a href="index3.html">Page 3</a></li>
     </ul>
 </nav>-->
+</body>
 </html>
